--- a/hello-world/Cargo.toml
+++ b/hello-world/Cargo.toml
@@ -2,6 +2,7 @@
 name = "hello-world"
 version = "0.1.0"
 authors = ["Geoffrey Thomas <geofft@ldpreload.com>"]
+edition = "2018"
 
 [lib]
 crate-type = ["staticlib"]
